request #21758: Stop using smooth-scrollbar
Browsers can achieve something that is close enough with the current
aspect with only CSS. The less dependencies we have, the better.

--- a/src/themes/BurningParrot/css/includes/_sidebar.scss
+++ b/src/themes/BurningParrot/css/includes/_sidebar.scss
@@ -105,6 +105,20 @@
     text-decoration: none;
 }
 
+.sidebar-content-vertical-scroll {
+    overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: var(--tlp-theme-dark-background-color-lighter-10) transparent;
+
+    &::-webkit-scrollbar {
+        width: 8px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: var(--tlp-theme-dark-background-color-lighter-10);
+    }
+}
+
 @import './sidebar-project';
 @import './sidebar-siteadmin';
 @import './sidebar-collapsed';
